--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>lsc</title>
+	<title>2048</title>
 	<meta charset="utf-8">
 	<style type="text/css">
 	body {
