--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
 	</header>
 	<nav>
 		<ul class="navbar">
-			<li><a href="#1" class="navbaractive">2048</a></li>
-			<li><a href="/table_of_posts.html">posts</a></li>
-			<li><a href="#3">Tag3</a></li>
-			<li><a href="#4">Tag4</a></li>
+			<li><a href="/" class="navbaractive">2048</a></li>
+			<li><a href="/table_of_posts.html">Post</a></li>
 		</ul>
 	</nav>
 
