--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </div>
             </td>
         </tr>
-        <tr>
-            <td colspan="2">
+        <tr style="margin-top: 20px">
+            <td colspan="2" valign='top'>
                 I am a third-year undergraduate from Turing Class at <a href="www.pku.edu.cn">Peking University</a>. <br>
                 I am enthusiastic about natural language processing (NLP). 
             </td>
