--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         .name_en{
             font-size: 34px;
             font-weight: bold;
+            margin-top: 20px;
         }
         .name_cn{
             font-size: 24px;
@@ -26,8 +27,8 @@
 <body>
     <table width="900" border="0">
         <tr>
-            <td align="right" id='avatar' width="300">
-                <img src="img/avatar_unknown.jpg" width="256" height="256">
+            <td align="right" id='avatar' width="200">
+                <img src="img/avatar.png" height="256">
             </td>
             <td valign='top' id='about'>
                 <div class="name_en">Shicheng Li</div>
