--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <br/>
                 <div>
                     <b>Email: </b><a href="mailto:lisc99@pku.edu.cn">lisc99@pku.edu.cn</a> <br/>
-                    <b>CV: </b><a href="file/cv.pdf" download="true">here</a>
+                    <b>CV: </b><a href="file/cv.pdf" download="cv.pdf">here</a>
                 </div>
             </td>
         </tr>
