--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Shicheng Li</title>
     <style type="text/css">
         body {
             background-color: #F5F5F5;
