--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                     </p>
                     <p>
                         I am enthusiastic about natural language processing (NLP). Currently, I work as a research intern in <a href="https://lanco.pku.edu.cn/">Language Computing and Machine Learning Group</a> (LANCO), advised by Prof. <a href="https://xusun.org/">Xu Sun</a>.  
-                    </p>                                      
+                    </p>
                 </div>                
             </td>
         </tr>
-    </table>    
+    </table>
+    <div id="visitor_counter"></div>
+    <script type="text/javascript" src="src/visit.js"></script>
 </body>
 </html>
